# algo

./: CMakeLists.txt  data_gen.cpp  mail_tempate.cpp  main.cpp
Structures/: ConnectedComponents.h  Dijkstra.h  Dinic.h  DisjointSetUnion.h  EdmondsKarp.h  FFT.h  Fraction.h  Kuhn.h  MaxHeap.h  SegmentTree.h  SimpleSegmentTree.h
Utils/: boilerplate_utils.h  numeric.h  read_utils.h
